# llm-finance-assistant

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  app.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DATABASE_IMPLEMENTATION.md  MONTHLY_DATA_MODEL.md  SQL_FIRST_RAG_ARCHITECTURE.md  SQL_FIRST_RAG_QUICK_START.md
scripts/: demo_monthly_model.py  seed_database.py
src/: __init__.py  main_api.py  main_cli.py
src/api/: __init__.py  app.py  dependencies.py
src/api/models/: __init__.py  chat.py  finance.py  statements.py
src/api/routes/: __init__.py  chat.py  core.py  statements.py
src/business_logic/: __init__.py  data.py  mcp.py  mcp_database.py  snapshot_service.py
src/config/: database.py
src/database/: __init__.py  init.py  models.py
src/models/: __init__.py  chat.py  domain.py
src/routes/: chat.py  search.py  statements.py
src/services/: __init__.py  aggregation_service.py  file_processor.py  narrative_generator.py  rag_query_handler.py  transaction_parser.py  vectorization.py
src/workflow/: __init__.py  graph.py  mcp_client.py  mcp_instance.py  nodes.py  state.py
tests/: test_agent_workflow.py  test_chat_plan.py  test_file_processor.py  test_integration.py  test_llm_pdf_parsing.py  test_mcp.py  test_mcp_client.py  test_mcp_database.py  test_narrative_generator.py  test_rag_query_handler.py  test_rag_search.py  test_rag_service.py  test_snapshot_models.py  test_transaction_parser.py  test_websocket_chat.py
