[project]
name = "llm-finance-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langgraph",
    "openai",
    "python-dotenv",
    "mcp",
    "sqlalchemy",
    "psycopg2-binary",
    "pandas",
    "speechrecognition",
    "pypdf2",
    "openpyxl",
    "python-multipart",
    "alembic",
]
